# talmobil

./: Cargo.toml  Rocket.toml  talmobil.toml
database data/: tal.json  users_template.json
database data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--6742665513989122517.wt  collection-0--7290213565223693140.wt  collection-2--7290213565223693140.wt  collection-4--7290213565223693140.wt  collection-9--7290213565223693140.wt  index-0--1963756725461950645.wt  index-1--6742665513989122517.wt  index-1--7290213565223693140.wt  index-10--7290213565223693140.wt  index-12--7290213565223693140.wt  index-2--6742665513989122517.wt  index-3--7290213565223693140.wt  index-5--7290213565223693140.wt  index-6--7290213565223693140.wt  sizeStorer.wt
middleman/: client_socket.py  middleman.py  server_socket.py
resources/add-car/: add-car.css  add-car.html
resources/calendar/: a.css  a.css.map  a.js  a.scss  calendar.css  calendar.css.map  calendar.html  calendar.scss  dd.css
resources/car-overview/: car-overview.css  car-overview.css.map  car-overview.html  car-overview.scss  h.html
resources/car-services/: car-services.css  car-services.css.map  car-services.html  car-services.scss
resources/car-view/: car-view.css  car-view.css.map  car-view.html  car-view.scss
resources/drive/: drive.css  drive.css.map  drive.html  drive.map  drive.scss
resources/edit-car/: deleteCar.js  (+2 more)
scripts/: carViewBar.js  deleteCar.js  drive.js  fileButton.js  locations.js  reloaded.js  signIn.js  toggleInvites.js
src/: main.rs  tests.rs
tls/: enckey.pem  mei.pem-chain
(+72 files in other folders)
